# another_world

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  docker.yml
configs/: config.yaml
configs/data/: dummy.yaml
configs/eval/: default.yaml
configs/model/: toy_350m.yaml
configs/train/: smoke.yaml
docker/: Dockerfile.infer  Dockerfile.train
docs/: architecture.md  data_card.md  gate0_report.md  model_card.md  roadmap.md  storage_setup.md  weekly_2026_W26.md
scripts/: benchmark_dataloader.py  bootstrap_lambda.sh  cosmos_roundtrip.py  crawl_manifest.py  ddp_smoke.py  eval_checkpoint.py  launch_train.sh  prepare_data.py  smoke_test.sh  tokenize_shards.py
src/another_world/: __init__.py
src/another_world/data/: __init__.py  storage_r2.py
src/another_world/data/crawlers/: __init__.py  manifest.py
src/another_world/data/datasets/: __init__.py  dummy.py  hf.py  rl_trajectory.py  sample.py  sequence_packer.py  token_shard_stream.py  transforms.py  webdataset_loader.py
src/another_world/data/filters/: __init__.py  pipeline.py
src/another_world/data/tokenize/: __init__.py  pipeline.py  shards.py
src/another_world/eval/: __init__.py  cli.py  i3d_fvd.py  long_horizon.py  metrics.py  vbench_wrapper.py
src/another_world/inference/: __init__.py  demo_cli.py  first_frame.py  generate_cli.py  generation.py  kv_cache.py
src/another_world/models/: __init__.py
src/another_world/models/decoder/: __init__.py  diffusion.py  dit.py  samplers.py
src/another_world/models/dynamics/: __init__.py  multimodal.py  toy.py
src/another_world/models/jepa/: __init__.py  predictor.py
src/another_world/models/layers/: __init__.py  (+2 more)
src/another_world/tokenizers/: __init__.py  vocab.py
src/another_world/training/: __init__.py  cfg_dropout.py  checkpoint.py  cli.py  distributed_wrap.py  dit_cli.py  dit_trainer.py  multimodal.py  multimodal_cli.py  smoke.py
src/another_world/utils/: __init__.py  device.py  distributed.py  doctor.py  experiment.py  logging.py
tests/integration/: test_cfg_pipeline.py  test_conditioning_pipeline.py  test_dataloader_canary.py  test_jepa_training.py  test_kv_cache_rollout.py  test_packer_model.py  test_rl_pipeline.py  test_shards_to_trainer.py  test_trainer_checkpoints.py  test_trainer_logger.py
tests/unit/: test_action_tokenizer.py  test_cfg.py  test_cfg_dropout.py  test_checkpoint.py  test_cli_entrypoints.py  test_clip_text_encoder.py  test_conditioning.py  test_cosmos_tokenizer.py  test_crawl_manifest.py  test_diffusion.py  test_distributed.py  test_distributed_wrap.py  test_dit_3d.py  test_dit_decoder.py  test_dit_trainer.py  test_doctor.py  test_dummy_dataset.py  test_eval_metrics.py  test_experiment.py  test_filters.py  test_first_frame.py  test_generation.py  test_hf_loader.py  test_i3d_fvd.py  test_jepa.py  test_kv_cache.py  test_layers.py  test_long_horizon.py  test_mixed_rope.py  test_multimodal_model.py  test_multimodal_trainer.py  test_package.py  test_r2_client.py  test_rl_trajectory.py  test_samplers.py  test_sequence_packer.py  test_smoke_trainer.py  test_text_tokenizer.py  test_token_shard_stream.py  test_token_shards.py  (+8 more)
(+7 files in other folders)
